@@ -8,8 +8,11 @@ tools:::print.Rd. See code in etc/parseRd.R
 
 == 1.5 
 
-new doc keyword for documentation lists causes replacement of list
-rather than adding to list.
+.names such as .s3method and .overwrite in inner documentation lists
+are ignored for find/replacement.
+
+.overwrite signals that all other items of the list should be used
+when combining, ignoring previous values stored in that slot.
 
 ##sections<< permitted immediately after ###return value
 
